[project]
name = "sfm-bathy-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "polars>=1.0",
    "rasterio>=1.4.3",
    "geopandas",
    "ipykernel",
    "laspy", 
    "xarray", 
    "rioxarray", 
    "numpy", 
    "scipy", 
    "matplotlib"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ipykernel",
    "jupyter",
]
