[project]
name = "sfm-bathy-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "polars>=1.0",
    "rasterio>=1.4.3",
    "eo-tides",
    "geopandas",
    "ipykernel",
    "laspy",
    "xarray",
    "rioxarray",
    "pyproj",
    "numpy",
    "scipy",
    "matplotlib",
    "pyTMD @ git+https://github.com/teguhsulistian/pyTMD.git@inatides-v2",
]

[tool.setuptools.packages.find]
include = ["sfmbathy*"]

# setuptools build backend
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# tool.uv.dev-dependencies
[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "jupyter",
]